# docs/api/sidebar.js
@@ -1,1 +1,0 @@
-module.exports = [{"type":"doc","id":"api/bonsai-rest-api"},{"type":"category","label":"Products","link":{"type":"generated-index","title":"Products","slug":"/category/api/products"},"items":[{"type":"doc","id":"api/products","label":"Products","className":"api-method get"}]},{"type":"category","label":"Order","link":{"type":"generated-index","title":"Order","slug":"/category/api/order"},"items":[{"type":"doc","id":"api/checkout","label":"Checkout","className":"api-method post"},{"type":"doc","id":"api/order","label":"Order","className":"api-method post"},{"type":"doc","id":"api/order-external-payment","label":"Order - External Payment","className":"api-method post"}]},{"type":"category","label":"Product collections","link":{"type":"generated-index","title":"Product collections","slug":"/category/api/product-collections"},"items":[{"type":"doc","id":"api/product-collection","label":"Product collection","className":"api-method get"}]},{"type":"category","label":"Product catalog","link":{"type":"generated-index","title":"Product catalog","slug":"/category/api/product-catalog"},"items":[{"type":"doc","id":"api/download-images","label":"Download images","className":"api-method get"}]}];
